examples/test/testpolicy10654.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10654
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key42: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value14
          key1: value31
          key39: value43
      podSelector:
        matchLabels:
          key35: value49
          key48: value49
          key9: value33
